tg-857 fix spinner hace aparecer scrollbar innecesariamente

--- a/front-end/webapp/src/assets/styles/mixins.scss
+++ b/front-end/webapp/src/assets/styles/mixins.scss
@@ -40,4 +40,5 @@
 	justify-content: center;
 	height: 100%;
 	width: 100%;
+	overflow: hidden;
 }
